tests/snapshots/examples_fixtures/guide__lambda.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/lambda.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
