tests/snapshots/examples_fixtures/guide__list_comprehension.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/list_comprehension.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
