tests/snapshots/examples_fixtures/guide__list_map_filter.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/list_map_filter.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
