tests/snapshots/examples_fixtures/guide__map_builtins.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/map_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
