tests/snapshots/examples_fixtures/guide__math_builtins.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/math_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
