tests/snapshots/examples_fixtures/guide__mini_database.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/mini_database.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
