tests/snapshots/examples_fixtures/guide__missing_comma_recovery.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/missing_comma_recovery.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
