tests/snapshots/examples_fixtures/guide__modulo.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/modulo.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
