tests/snapshots/examples_fixtures/guide__multiline_strings.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/multiline_strings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
