tests/snapshots/examples_fixtures/guide__non_zero_division.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/non_zero_division.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
