tests/snapshots/examples_fixtures/guide__pipe_operator.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/pipe_operator.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
