tests/snapshots/examples_fixtures/guide__prefix.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/prefix.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
